snap seems broken when scaling #46503

Closed
opened 2015-10-16 03:57:37 +02:00 by Roy Mathew · 23 comments

System Information
Ubuntu 14.04 (Trusty) running on a Lenovo laptop #500.

Blender Version
Broken: (2.69)
Worked: N/A

Short description of error
When scaling the right object along the x-axis with snap turned on,
the snap doesn't snap to the object on the left.

Exact steps for others to reproduce the error
Open the attached .blend file.
Select the object on the right.
Scale along the x-axis to the left
Notice that snap doesn't work.

ss.jpg

**System Information** Ubuntu 14.04 (Trusty) running on a Lenovo laptop #500. **Blender Version** Broken: (2.69) Worked: N/A **Short description of error** When scaling the right object along the x-axis with snap turned on, the snap doesn't snap to the object on the left. **Exact steps for others to reproduce the error** Open the attached .blend file. Select the object on the right. Scale along the x-axis to the left Notice that snap doesn't work. ![ss.jpg](https://archive.blender.org/developer/F245373/ss.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @roym

Added subscriber: @roym
Author

forgot to add .blend file earlier.problem.blend

forgot to add .blend file earlier.[problem.blend](https://archive.blender.org/developer/F245376/problem.blend)

This issue was referenced by 2f35217849

This issue was referenced by 2f35217849c82af87e35a0916e7d70d0d8e2dbaf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Thanks for the report, fixed in master, note that since 2.69 - a related bug (#39161) was fixed too, so worth using recent builds - https://builder.blender.org/download/

We may back-port this for 2.76a.

Thanks for the report, fixed in master, note that since 2.69 - a related bug (#39161) was fixed too, so worth using recent builds - https://builder.blender.org/download/ We may back-port this for 2.76a.
Author

Thankyou very much. I've also updated the SO thread to mention the fix.

Thankyou very much. I've also updated the [SO thread ](http://blender.stackexchange.com/questions/39981/snap-to-edge-vertex-when-scaling/40090#40090) to mention the fix.

Added subscriber: @atika10

Added subscriber: @atika10

Snap tool still broken. No difference in daily builds

Snap tool still broken. No difference in daily builds

@atika10, checked again with master and its working here.
perhaps @roym can confirm if the fix is working.

@atika10, checked again with master and its working here. perhaps @roym can confirm if the fix is working.
Author

Added subscriber: @semmi

Added subscriber: @semmi
Author

The fix is working for me.

@atika10 - I looked at your .blend file attached to the thread at http://blender.stackexchange.com/questions/39981/snap-to-edge-vertex-when-scaling . It's a large file and it's not clear what isn't working - can you reduce the problem to a small file with 2 objects.

The fix is working for me. @atika10 - I looked at your .blend file attached to the thread at http://blender.stackexchange.com/questions/39981/snap-to-edge-vertex-when-scaling . It's a large file and it's not clear what isn't working - can you reduce the problem to a small file with 2 objects.

2.75 working

2.76 broken

Daily build still broken.

Thank you the care about.

[2.75 working ](http://giphy.com/gifs/xTiTnlwJieLNWWkidi) [2.76 broken ](http://giphy.com/gifs/xTiTnI62Gw55PyXxsc) Daily build still broken. Thank you the care about.

i realized this problem to (with 2.76),
but only if scaling around >3d-cursor< (and cursor is exactly on vertex-point),
problem--around-3d-cursor-only.blend
if scaling around origin, problem did not occurs

i realized this problem to (with 2.76), but only if scaling around >3d-cursor< (and cursor is exactly on vertex-point), [problem--around-3d-cursor-only.blend](https://archive.blender.org/developer/F245910/problem--around-3d-cursor-only.blend) if scaling around origin, problem did not occurs

Im scaling around origins, as you can see on gif attachments.

(actually thats a median point because i try everything, but im work with origins mode, and every mode working in 2.75)

Do you need any information from my workmachine and operating system or etc, for easier problem identification?

Im scaling around origins, as you can see on gif attachments. (actually thats a median point because i try everything, but im work with origins mode, and every mode working in 2.75) Do you need any information from my workmachine and operating system or etc, for easier problem identification?

mhm, may its a bug ;) ... i only read this thread and tryed to reproduce ...
same behaivor here with 2.76
( reduced sample from stackexchange here: snap_problem-1-reduced.blend )

mhm, may its a bug ;) ... i only read this thread and tryed to reproduce ... same behaivor here with 2.76 ( reduced sample from stackexchange here: [snap_problem-1-reduced.blend](https://archive.blender.org/developer/F245915/snap_problem-1-reduced.blend) )
Author

@semmi - you're right. I tried it with Campbell's fix: this .blend demonstrates that there still is a snap problem.

@semmi - you're right. I tried it with Campbell's fix: this .blend demonstrates that there still is a snap problem.

I'm so excited :D : D A trying every daily build . I will shout if all right :)

I'm so excited :D : D A trying every daily build . I will shout if all right :)

Committed fix for snap_problem-1-reduced.blend 6222505739.

Set axis alignment to Z while snapping and this works as expected.


@semmi, best just report a new bug, if you notice a fix for one bug doesn't resolve an error in a related area.

Committed fix for `snap_problem-1-reduced.blend` 6222505739. Set axis alignment to Z while snapping and this works as expected. ----- @semmi, best just report a new bug, if you notice a fix for one bug doesn't resolve an error in a related area.

Hello!

blender-2.76-6222505-win64 daily build seems working Z and Y axis, there is a strange thing on X axis. See gif upper right corner , if snapping X axis.

daily276zy

Its will be good very soon. I feel it :)

Hello! blender-2.76-6222505-win64 daily build seems working Z and Y axis, there is a strange thing on X axis. See gif upper right corner , if snapping X axis. [daily276zy ](http://giphy.com/gifs/3oEduS5a0vK4C7nYFG) Its will be good very soon. I feel it :)

@atika10, corrected 23848a70de

@atika10, corrected 23848a70de
  Good news!
  Latest build working awesome properly!!!  
  This team the best! 
  ( i cant be able to use blender git currently, so i cant did the code change, what Campbell linked. :)  ( but i will learn)   )
``` Good news! ``` ``` Latest build working awesome properly!!! ``` ``` This team the best! ``` ``` ( i cant be able to use blender git currently, so i cant did the code change, what Campbell linked. :) ( but i will learn) )
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46503
No description provided.