Fix T46503: Snap scale fails using corner pivot